[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/BigBull/BigJumpingBull.gd" type="Script" id=1]
[ext_resource path="res://Enemies/BigBull/BigBull.png" type="Texture" id=2]
[ext_resource path="res://Colliders/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Colliders/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Colliders/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/BloodManager.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.975, 1.025 ), Vector2( 0.8, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScaleHelper/Sprite/Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScaleHelper/Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Roll"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 0.392292, 2.54912, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.8 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.420448, 2.73208 ),
"update": 0,
"values": [ Vector2( 0, -28 ), Vector2( 0, -56 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScaleHelper/Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.9, -12.0, -12.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScaleHelper/Sprite/Shadow:global_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 22 ), Vector2( 0, 65 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ScaleHelper/Sprite/Shadow:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.9, 12.0, 12.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.8 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScaleHelper/Sprite/Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScaleHelper/Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.99995
height = 24.0002

[sub_resource type="CapsuleShape2D" id=6]
radius = 17.0
height = 0.0

[sub_resource type="CircleShape2D" id=7]
radius = 25.0799

[sub_resource type="CircleShape2D" id=8]
radius = 14.0357

[node name="Bull" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )
speed = 7500
sightDist = 240
kbStrength = 1200

[node name="ScaleHelper" type="Node2D" parent="."]
position = Vector2( 0, -9.53674e-07 )
scale = Vector2( 1.2, 0.8 )

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
position = Vector2( 0, -28 )
texture = ExtResource( 2 )
hframes = 14
frame = 12

[node name="Shadow" type="Sprite" parent="ScaleHelper/Sprite"]
modulate = Color( 0, 0, 0, 0.498039 )
position = Vector2( 0, 64 )
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )
hframes = 14
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/Roll = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="Hurt" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -7 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Sight" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true

[node name="Hit" type="RayCast2D" parent="."]
enabled = true

[node name="Hitbox" parent="." groups=[
"enemy",
] instance=ExtResource( 3 )]
visible = false
position = Vector2( 1, -14 )
collision_mask = 2
maskedHurtbox = "enemy"
damage = 12

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -7 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 1, -24 )
collision_layer = 4
defense = 8
health = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, 3 )
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -22 )
shape = SubResource( 8 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="BloodManager" parent="." instance=ExtResource( 6 )]

[connection signal="dead" from="Hurtbox" to="." method="_on_dead"]
[connection signal="hurt" from="Hurtbox" to="BloodManager" method="emit_blood"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurt"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="SoftCollision"]
